# aligus-net

./: .gitmodules  Makefile  README.md  aligus-net.cabal  astro.html  game-of-life.html  hugo.toml  index.html  projects.html  site.hs  stack.yaml  stats.html
assets/sass/: _game-of-life.scss  _pandoc-solarized.scss  _stats.scss
content/: _index.md  astro.html  game-of-life.html  stats.html
content/posts/: 2014-07-01-optimer-benchmarks.md  2016-06-02-haskell-cabal.md  2017-07-08-moon-effects.md  _index.md
content/projects/: _index.md  astro.md  fsstats.md  mixvm.md  mltool.md  optimer.md  raft.md
content/tea-meetup/: 2018-06-20-reasonml.md  2018-06-30-svd.md  _index.md
css/: default.sass
layouts/: index.html
layouts/_default/: baseof.html  list.html  single.html
layouts/partials/: menu.html  page_tags.html  pagination.html  site_tags.html
layouts/projects/: list.html
posts/: 2014-07-01-optimer-benchmarks.md  2015-10-07-rosa-rosa-rosam.markdown  2016-06-02-haskell-cabal.md  2017-07-08-moon-effects.md
projects/: 100_mltool.md  200_astro.md  300_raft.md  400_optimer.md  500_fsstats.md  600_mixvm.md
sass/: _archive.sass  _astro.scss  _colors.sass  _pandoc-github.scss  _pandoc-solarized.scss  _project.sass  _reset.scss  default.sass
tea-meetup/: 2018-06-20-reasonml.md  2018-06-30-svd.md
templates/: archive.html  default.html  post.html  project.html  tea-meetup-history.html  tea-meetup-list.html
