name:               aligus-net
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , hakyll-sass
                  , latex-formulae-hakyll
                  , latex-formulae-pandoc
                  , latex-formulae-image
  ghc-options:      -threaded
  default-language: Haskell2010
